--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ compose_m3 = "1.0.0-alpha16"
 compose_compiler = "1.3.2"
 accompanist = "0.26.1-alpha"
 retrofit = "2.9.0"
-richText = "0.13.0"
+room = "2.5.0"
 
 [plugins]
 
@@ -34,6 +34,10 @@ accompanistPagerIndicators = { module = "com.google.accompanist:accompanist-page
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofitGson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 
+roomRuntime = { module = "androidx.room:room-runtime", version.ref = "room" }
+roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
+roomCompiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+
 
 [bundles]
 androidx = ["androidCoreKtx", "androidPalette", "androidLifecycleKtx", "androidCustomView", "androidCustomViewPoolingContainer"]
@@ -41,3 +45,4 @@ compose = ["composeMaterial", "composeMaterialIcons", "composeMaterial3", "compo
 composeDebug = ["composeUiTooling", "composeUiToolingPreview", "composeTestManifest"]
 accompanist = ["accompanistNavigation", "accompanistSystemUi", "accompanistPager", "accompanistPagerIndicators"]
 retrofit = ["retrofit", "retrofitGson"]
+room = ["roomRuntime", "roomKtx", "roomCompiler"]
